--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ seaborn==0.11.1
 jupyter==1.0.0
 statsmodels==0.13.5
 pandasql==0.7.3
-wheel
+wheel==0.37.0
 duckdb==0.7.1
-spacy
+spacy==3.2.1
 xgboost==1.4.2
 gensim==4.1.2
 pytest==6.2.5
